--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,3 +7,19 @@ Have a good read!
 ## [Dockerワークショップ](/docker-workshop-ja/)
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
+
+## Docker で動かす
+
+このドキュメントサイトは Docker イメージとして [Docker Hub](https://hub.docker.com/repository/docker/tadashi0713/docs-tadashi0713-dev/general) に公開されています。
+
+1. Docker Desktop を開きます(インストールしていない場合には [こちら](https://www.docker.com/ja-jp/products/docker-desktop/) からダウンロードします)
+2. ターミナルで次のコマンドを実行します `docker run -dp 80:80 tadashi0713/docs-tadashi0713-dev`
+3. http://localhost をブラウザで開きます
+
+## Run on Docker
+
+This document site is published as a Docker image on [Docker Hub](https://hub.docker.com/repository/docker/tadashi0713/docs-tadashi0713-dev/general).
+
+1. Open Docker Desktop. (Download [here](https://www.docker.com/products/docker-desktop/) if you don’t have it).
+2. Type the following command in your terminal: `docker run -dp 80:80 tadashi0713/docs-tadashi0713-dev`
+3. Open your browser to http://localhost
