Add docker scout

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,6 +8,10 @@ Have a good read!
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
 
+## [Docker Scout ドキュメント](/scout-ja/)
+
+[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
+
 ## Docker で動かす
 
 このドキュメントサイトは Docker イメージとして [Docker Hub](https://hub.docker.com/repository/docker/tadashi0713/docs-tadashi0713-dev/general) に公開されています。
