--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,7 +10,7 @@ Have a good read!
 
 ## [Docker Scout ドキュメント](/scout-ja/)
 
-[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
+[Docker Scout ドキュメント]() を日本語訳したものです。
 
 ## Docker で動かす
 
