--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,16 +1,32 @@
+import { Cards } from 'nextra/components'
+
 # Welcome
 
 This site is collections of documents created by Tadashi Nemoto(tadashi0713).
 
 Have a good read!
 
-## [Dockerワークショップ](/docker-workshop-ja/)
+## コンテンツ
+
+<br />
+
+<Cards.Card
+  title="Dockerワークショップ"
+  href="/docker-workshop-ja"
+  arrow
+/>
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
 
-## [Docker Scout ドキュメント](/scout-ja/)
+<br />
 
-[Docker Scout ドキュメント]() を日本語訳したものです。
+<Cards.Card
+  title="Docker Scout ドキュメント"
+  href="/scout-ja"
+  arrow
+/>
+
+[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
 
 ## Docker で動かす
 
