--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,5 @@
 import { Cards } from 'nextra/components'
+import { FaDocker, FaCompass } from "react-icons/fa";
 
 # Welcome
 
@@ -11,6 +12,7 @@ Have a good read!
 <br />
 
 <Cards.Card
+  icon={<FaDocker />}
   title="Dockerワークショップ"
   href="/docker-workshop-ja"
   arrow
@@ -21,6 +23,7 @@ Have a good read!
 <br />
 
 <Cards.Card
+  icon={<FaCompass />}
   title="Docker Scout ドキュメント"
   href="/scout-ja"
   arrow
