not use next image directly

--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -1,4 +1,3 @@
-import Image from 'next/image'
 import { Tabs } from 'nextra/components'
 
 このガイドの残りの部分では、Node.js で動作するシンプルなタスク管理アプリを使って作業を進めます。Node.js に詳しくない場合でも心配いりません。このガイドでは、JavaScript の事前知識は必要ありません。
@@ -135,7 +134,7 @@ import { Tabs } from 'nextra/components'
 
 2. 数秒後に、ウェブブラウザで http://localhost:3000 にアクセスします。アプリが表示されるはずです。
 
-   <Image src="/docker-workshop-ja/todo-list-empty.webp" alt="Empty todo list" width="1160" height="226" />
+   ![Empty todo list](/docker-workshop-ja/todo-list-empty.webp)
 
 3. アイテムを1つか2つ追加し、期待通りに動作するか確認してください。アイテムを完了としてマークしたり、削除したりできます。フロントエンドは、正常にバックエンドにアイテムを保存しています。
 
@@ -159,7 +158,7 @@ CLIやDocker Desktopを使ってコンテナを確認すると、少なくとも
   <Tabs.Tab>
    Docker Desktopで、**Containers** タブを選択してコンテナのリストを表示します。
 
-   <Image src="/docker-workshop-ja/dashboard-two-containers.webp" alt="Empty todo list" width="1274" height="724" />
+   ![Empty todo list](/docker-workshop-ja/dashboard-two-containers.webp)
   </Tabs.Tab>
 </Tabs>
 
