--- a/pages/docker-workshop-ja/04_sharing_app.mdx
+++ b/pages/docker-workshop-ja/04_sharing_app.mdx
@@ -1,5 +1,3 @@
-import Image from 'next/image'
-
 イメージをビルドしたので、それを共有できます。Dockerイメージを共有するには、Dockerレジストリを使用する必要があります。デフォルトのレジストリはDocker Hubであり、これまで使用してきたすべてのイメージはここから取得されています。
 
 > **Docker ID**
@@ -20,7 +18,7 @@ import Image from 'next/image'
 
 以下の画像では、Docker HubからのDockerコマンドの例が表示されています。このコマンドでこのリポジトリにプッシュします。
 
-<Image src="/docker-workshop-ja/push-command.webp" alt="Docker command with push example" width="996" height="280" />
+![Docker command with push example](/docker-workshop-ja/push-command.webp)
 
 
 ## イメージをプッシュする
@@ -74,7 +72,7 @@ import Image from 'next/image'
 
 4. 左側のサイドバーで **ADD NEW INSTANCE** オプションを選択します。これが見つからない場合、ブラウザの幅を少し広げてください。数秒後、ブラウザ内にターミナルウィンドウが表示されます。
 
-    <Image src="/docker-workshop-ja/pwd-add-new-instance.webp" alt="Play with Docker add new instance" width="2052" height="1128" />
+    ![Play with Docker add new instance](/docker-workshop-ja/pwd-add-new-instance.webp)
 
 5. ターミナルで、プッシュしたばかりのアプリを起動します。
 
