--- a/pages/docker-workshop-ja/06_bind_mounts.mdx
+++ b/pages/docker-workshop-ja/06_bind_mounts.mdx
@@ -1,4 +1,3 @@
-import Image from 'next/image'
 import { Tabs } from 'nextra/components'
 
 [パート4](./05_persisting_data) では、ボリュームマウントを使用してデータベースのデータを永続化しました。アプリケーションデータを永続的に保存する必要がある場合、ボリュームマウントは素晴らしい選択です。
@@ -315,7 +314,7 @@ CLIまたはDocker Desktopを使用して、バインドマウント付きでコ
 
 2. ウェブブラウザでページをリフレッシュすると、バインドマウントのおかげですぐに変更が反映されます。Nodemonは変更を検知してサーバーを再起動します。Nodeサーバーの再起動には数秒かかることがあります。エラーが発生した場合は、数秒後にもう一度リフレッシュしてみてください。
 
-   <Image src="/docker-workshop-ja/updated-add-button.webp" alt="Screenshot of updated label for Add button" width="1152" height="226" />
+   ![Screenshot of updated label for Add button](/docker-workshop-ja/updated-add-button.webp)
 
 3. 他に変更したい箇所があれば、自由に変更してください。ファイルを保存するたびに、変更がバインドマウントのおかげでコンテナに反映されます。Nodemonは変更を検知し、コンテナ内でアプリを自動的に再起動します。すべての作業が終わったら、コンテナを停止し、以下のコマンドを使用して新しいイメージをビルドします。
 
