--- a/pages/scout-ja/concepts/sbom.mdx
+++ b/pages/scout-ja/concepts/sbom.mdx
@@ -1,3 +1,8 @@
+---
+title: ソフトウェア部品表 (Software Bill of Materials, SBOM)
+description: ソフトウェア部品表（SBOM）について、またDocker ScoutがどのようにSBOMを活用しているかを学びます。
+---
+
 # ソフトウェア部品表 (Software Bill of Materials, SBOM)
 
 部品表 (Bill of Materials, BOM) とは、製品を製造するために必要な材料、部品、およびその数量のリストです。例えば、コンピュータの部品表には、マザーボード、CPU、RAM、電源、ストレージデバイス、ケース、その他のコンポーネントが含まれ、それらをコンピュータに組み立てるために必要な数量がリストされています。
