--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,6 @@
 import { Cards } from 'nextra/components'
 import { FaDocker, FaCompass } from "react-icons/fa";
+import { AiOutlineCloudServer } from "react-icons/ai";
 
 # Welcome
 
@@ -30,6 +31,17 @@ Have a good read!
 />
 
 [Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
+
+<br />
+
+<Cards.Card
+  icon={<AiOutlineCloudServer />}
+  title="Docker Build Cloud ドキュメント"
+  href="/build-cloud-ja"
+  arrow
+/>
+
+[Docker Build Cloud ドキュメント](https://docs.docker.com/build-cloud/) を日本語訳したものです。
 
 ## Docker で動かす
 
