--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
 import { Cards } from 'nextra/components'
-import { FaDocker, FaCompass } from "react-icons/fa";
+import { FaDocker } from "react-icons/fa";
 import { AiOutlineCloudServer } from "react-icons/ai";
 
 # Welcome
