--- a/pages/build-cloud-ja.mdx
+++ b/pages/build-cloud-ja.mdx
@@ -37,7 +37,7 @@ Docker Build Cloud を始めるには、
 
 もし組織がまだ有料のDockerサブスクリプションを利用していない場合、Docker Build Cloud に登録するために支払い方法を提供する必要があります。ただし、スタータープランを選択した場合、提供された支払い方法に対して料金が請求されることはなく、これは確認のために必要なだけです。
 
-登録してビルダーを作成したら、[ローカル環境でビルダーを設定](./setup)する手順を続けてください。
+登録してビルダーを作成したら、[ローカル環境でビルダーを設定](./build-cloud-ja/setup)する手順を続けてください。
 
 利用可能なサブスクリプションプランについての詳細は、[Docker Build Cloud のサブスクリプションと機能](https://docs.docker.com/subscription/build-cloud/build-details/)をご覧ください。
 Docker Build Cloud に関連するロールと権限に関する情報は、[ロールと権限](https://docs.docker.com/security/for-admins/roles-and-permissions/#docker-build-cloud)をご覧ください。
