add title and description for workshop

--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -1,4 +1,11 @@
+---
+title: アプリケーションをコンテナ化する
+description: Dockerを使用してアプリケーションをコンテナ化する方法を、ステップバイステップで学べるガイドです。
+---
+
 import { Tabs } from 'nextra/components'
+
+# アプリケーションをコンテナ化する
 
 このガイドの残りの部分では、Node.js で動作するシンプルなタスク管理アプリを使って作業を進めます。Node.js に詳しくない場合でも心配いりません。このガイドでは、JavaScript の事前知識は必要ありません。
 
