--- a/pages/docker-workshop-ja/03_updating_app.mdx
+++ b/pages/docker-workshop-ja/03_updating_app.mdx
@@ -1,4 +1,11 @@
+---
+title: アプリケーションの更新
+description: アプリケーションに変更を加える
+---
+
 import { Tabs } from 'nextra/components'
+
+# アプリケーションの更新
 
 [パート1](./02_our_app) では、todoアプリケーションをコンテナ化しました。このパートでは、アプリケーションとイメージを更新します。また、コンテナの停止および削除方法についても学びます。
 
