--- a/pages/docker-workshop-ja/04_sharing_app.mdx
+++ b/pages/docker-workshop-ja/04_sharing_app.mdx
@@ -1,3 +1,10 @@
+---
+title: アプリケーションを共有する
+description: 作成したアプリケーションのイメージを共有し、他の場所で実行したり、他の開発者がそれを利用できるようにします。
+---
+
+# アプリケーションを共有する
+
 イメージをビルドしたので、それを共有できます。Dockerイメージを共有するには、Dockerレジストリを使用する必要があります。デフォルトのレジストリはDocker Hubであり、これまで使用してきたすべてのイメージはここから取得されています。
 
 > **Docker ID**
