--- a/pages/docker-workshop-ja/05_persisting_data.mdx
+++ b/pages/docker-workshop-ja/05_persisting_data.mdx
@@ -1,4 +1,11 @@
+---
+title: データベースの永続化
+description: アプリケーション内でデータベースを永続化する
+---
+
 import { Tabs } from 'nextra/components'
+
+# データベースの永続化
 
 もし気づいていない場合、コンテナを起動するたびに、todoリストが空になっています。なぜそうなるのでしょうか？このパートでは、コンテナがどのように動作しているかを詳しく見ていきます。
 
