--- a/pages/docker-workshop-ja/06_bind_mounts.mdx
+++ b/pages/docker-workshop-ja/06_bind_mounts.mdx
@@ -1,4 +1,11 @@
+---
+title: バインドマウントを使用する
+description: アプリケーションでバインドマウントを使用する
+---
+
 import { Tabs } from 'nextra/components'
+
+# バインドマウントを使用する
 
 [パート4](./05_persisting_data) では、ボリュームマウントを使用してデータベースのデータを永続化しました。アプリケーションデータを永続的に保存する必要がある場合、ボリュームマウントは素晴らしい選択です。
 
