--- a/pages/docker-workshop-ja/09_image_best.mdx
+++ b/pages/docker-workshop-ja/09_image_best.mdx
@@ -1,3 +1,10 @@
+---
+title: イメージビルドのベストプラクティス
+description: アプリケーションのイメージをビルドするためのヒント
+---
+
+# イメージビルドのベストプラクティス
+
 ## イメージのレイヤー化
 
 `docker image history` コマンドを使うと、各レイヤーがどのように作成されたかを確認できます。
