--- a/pages/docker-workshop-ja/10_what_next.mdx
+++ b/pages/docker-workshop-ja/10_what_next.mdx
@@ -1,3 +1,10 @@
+---
+title: Dockerワークショップ後の次のステップ
+description: アプリケーションで次に何をするか、さらなるアイデアを提供します
+---
+
+# Dockerワークショップ後の次のステップ
+
 ワークショップは終了しましたが、コンテナについて学ぶことはまだたくさんあります。次に学ぶべきいくつかの領域を紹介します。
 
 ## コンテナオーケストレーション
