--- a/pages/docker-workshop-ja/index.mdx
+++ b/pages/docker-workshop-ja/index.mdx
@@ -1,3 +1,10 @@
+---
+title: Dockerワークショップの概要
+description: このワークショップでDockerの基本を学びましょう。コンテナ、イメージ、そして最初のアプリケーションをコンテナ化する方法について学びます。
+---
+
+# Dockerワークショップの概要
+
 この45分間のワークショップでは、Dockerを始めるためのステップバイステップの手順を提供します。このワークショップでは次のことを学びます。
 
 - イメージを作成し、コンテナとして実行する方法
