--- a/pages/docker-workshop-ja/07_multi_container.mdx
+++ b/pages/docker-workshop-ja/07_multi_container.mdx
@@ -1,4 +1,11 @@
+---
+title: マルチコンテナアプリケーション
+description: アプリケーションで複数のコンテナを使用する
+---
+
 import { Tabs } from 'nextra/components'
+
+# マルチコンテナアプリケーション
 
 ここまで、単一コンテナのアプリケーションを扱ってきました。しかし、これからはMySQLをアプリケーションスタックに追加します。次のような質問がよく出てきます。「MySQLはどこで動かすべきか？同じコンテナにインストールするか、別々に動かすか？」一般的に、各コンテナは1つのことを行い、それをうまくやるべきです。以下は、MySQLを別のコンテナで実行する理由のいくつかです。
 
