--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
 import { Cards } from 'nextra/components'
-import { FaDocker } from "react-icons/fa";
+import { FaDocker, FaCompass } from "react-icons/fa";
 import { AiOutlineCloudServer } from "react-icons/ai";
 
 # Welcome
@@ -21,7 +21,7 @@ Have a good read!
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
 
-{/* <br />
+<br />
 
 <Cards.Card
   icon={<FaCompass />}
@@ -30,7 +30,7 @@ Have a good read!
   arrow
 />
 
-[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。 */}
+[Docker Scout ドキュメント](https://docs.docker.com/scout/) を日本語訳したものです。
 
 <br />
 
