--- a/pages/scout-ja/integrations/ci.mdx
+++ b/pages/scout-ja/integrations/ci.mdx
@@ -8,10 +8,10 @@ description: Docker Scout を継続的インテグレーションパイプライ
 Docker Scout CLI プラグインや GitHub Action を使用して、Dockerイメージをビルドする際に継続的インテグレーションパイプライン内で分析することができます。
 
 利用可能な連携:
-- GitHub Actions
-- GitLab
-- Microsoft Azure DevOps Pipelines
-- Circle CI
-- Jenkins
+- [GitHub Actions](/scout-ja/integrations/ci/gha)
+- [GitLab](/scout-ja/integrations/ci/gitlab)
+- [Microsoft Azure DevOps Pipelines](/scout-ja/integrations/ci/azure)
+- [Circle CI](/scout-ja/integrations/ci/circle-ci)
+- [Jenkins](/scout-ja/integrations/ci/jenkins)
 
 また、CI/CDパイプラインの一環としてランタイム連携を追加し、デプロイ時にイメージを `production` や `staging` といった環境に割り当てることもできます。詳細については [Environment モニタリング](https://chatgpt.com/environment/_index.md)をご覧ください。
