--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,8 @@
+---
+description: This site is collections of documents created by Tadashi Nemoto(tadashi0713). Have a good read!
+title: tadashi0713 Docs
+---
+
 import { Cards } from 'nextra/components'
 import { FaDocker, FaCompass } from "react-icons/fa";
 import { AiOutlineCloudServer } from "react-icons/ai";
