--- a/pages/scout-ja.mdx
+++ b/pages/scout-ja.mdx
@@ -1,3 +1,8 @@
+---
+title: Docker Scout
+description: Docker Scout を使ってソフトウェアサプライチェーンのセキュリティを積極的に強化しましょう。
+---
+
 # Docker Scout
 
 コンテナイメージはレイヤーやソフトウェアパッケージで構成されており、脆弱性の影響を受けやすくなっています。これらの脆弱性は、コンテナやアプリケーションのセキュリティを危険にさらす可能性があります。
