--- a/pages/docker-workshop-ja/06_bind_mounts.mdx
+++ b/pages/docker-workshop-ja/06_bind_mounts.mdx
@@ -4,6 +4,7 @@ description: アプリケーションでバインドマウントを使用する
 ---
 
 import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra/components'
 
 # バインドマウントを使用する
 
@@ -276,9 +277,9 @@ CLIまたはDocker Desktopを使用して、バインドマウント付きでコ
       2. 検索ウィンドウで **Images** タブを選択します。
       3. 検索ボックスにコンテナ名 `getting-started` を指定します。
 
-         > [!TIP]
-         >
-         >  **Local images** のみを表示するために検索フィルタを使用してください。
+        <Callout emoji="💡">
+          **Local images** のみを表示するために検索フィルタを使用してください。
+        </Callout>
 
       4. イメージを選択し、**Run** を選択します。
       5. **Optional settings** を選択します。
