--- a/pages/scout-ja/integrations/ci/gha.mdx
+++ b/pages/scout-ja/integrations/ci/gha.mdx
@@ -3,6 +3,8 @@ title: Docker Scout を GitHub Actions と連携する
 description: Docker ScoutをGitHub Actionsと連携する方法
 ---
 
+import { Callout } from 'nextra/components'
+
 # Docker Scout を GitHub Actions と連携する
 
 以下の例では、GitHub Actions で Docker Scout のワークフローを設定する方法を示しています。このアクションはプルリクエストによってトリガーされ、イメージをビルドし、その新しいバージョンを本番環境で稼働中のイメージと比較します。
@@ -92,11 +94,11 @@ jobs:
 3. Git リファレンスや GitHub イベントからメタデータを抽出します。
 4. Dockerイメージをビルドし、レジストリにプッシュします。
 
-> [!NOTE]
-> 
-> このCIワークフローはローカルのイメージ分析と評価を実行します。イメージをローカルで評価するためには、ランナーのローカルイメージストアにイメージがロードされている必要があります。
->
-> イメージをレジストリにプッシュした場合や、マルチプラットフォームイメージ、SBOMや証明書付きイメージなどがローカルイメージストアにロードできない場合、この比較は機能しません。
+<Callout type="info" emoji="ℹ️">
+  このCIワークフローはローカルのイメージ分析と評価を実行します。イメージをローカルで評価するためには、ランナーのローカルイメージストアにイメージがロードされている必要があります。
+
+  イメージをレジストリにプッシュした場合や、マルチプラットフォームイメージ、SBOMや証明書付きイメージなどがローカルイメージストアにロードできない場合、この比較は機能しません。
+</Callout>
 
 この設定が完了したら、イメージの比較を実行するための以下のステップを追加します。
 
