--- a/pages/private/cli-proxy.mdx
+++ b/pages/private/cli-proxy.mdx
@@ -3,6 +3,8 @@ title: Docker CLIでプロキシサーバーを使用する
 description: DockerクライアントCLIをプロキシサーバーで使用する方法
 ---
 
+import { Callout } from 'nextra/components'
+
 # Docker CLIでプロキシサーバーを使用する
 
 このページでは、コンテナ内で環境変数を使用してDocker CLIにプロキシを設定する方法について説明します。
@@ -16,11 +18,11 @@ Docker Desktopを使用せずにDocker Engineを実行している場合は、[D
 - [Dockerクライアントの設定](#dockerクライアントの設定)
 - [CLIでプロキシを設定する](#cliでプロキシを設定する)
 
-> [!NOTE]
->
-> 残念ながら、Webクライアントがプロキシ環境変数をどのように処理するべきか、またそれを定義するフォーマットに関する標準は存在しません。
->
-> これらの変数の歴史について興味がある場合、GitLabチームによるブログ記事をご覧ください：[We need to talk: Can we standardize NO_PROXY?](https://about.gitlab.com/blog/2021/01/27/we-need-to-talk-no-proxy/)。
+<Callout type="info" emoji="ℹ️">
+  残念ながら、Webクライアントがプロキシ環境変数をどのように処理するべきか、またそれを定義するフォーマットに関する標準は存在しません。
+
+  これらの変数の歴史について興味がある場合、GitLabチームによるブログ記事をご覧ください：[We need to talk: Can we standardize NO_PROXY?](https://about.gitlab.com/blog/2021/01/27/we-need-to-talk-no-proxy/)。
+</Callout>
 
 ## Dockerクライアントの設定
 
@@ -38,11 +40,11 @@ Dockerクライアントのプロキシ設定は、`~/.docker/config.json`にあ
 }
 ```
 
-> [!WARNING]
->
-> プロキシ設定には機密情報が含まれることがあります。例えば、いくつかのプロキシサーバーは認証情報をURLに含める必要がある場合があり、あるいは会社の環境におけるIPアドレスやホスト名が露出する可能性があります。
->
-> 環境変数はコンテナの設定にプレーンテキストとして保存されるため、リモートAPI経由で確認したり、docker commitコマンドを使用してイメージにコミットされた場合に検査される可能性があります。
+<Callout type="warning" emoji="⚠️">
+  プロキシ設定には機密情報が含まれることがあります。例えば、いくつかのプロキシサーバーは認証情報をURLに含める必要がある場合があり、あるいは会社の環境におけるIPアドレスやホスト名が露出する可能性があります。
+
+  環境変数はコンテナの設定にプレーンテキストとして保存されるため、リモートAPI経由で確認したり、docker commitコマンドを使用してイメージにコミットされた場合に検査される可能性があります。
+</Callout>
 
 ファイルを保存すると設定が有効になり、Dockerの再起動は不要です。ただし、この設定は新しいコンテナとビルドにのみ適用され、既存のコンテナには影響しません。
 
