--- a/pages/private/remote-access.mdx
+++ b/pages/private/remote-access.mdx
@@ -4,18 +4,21 @@ description:
   リモートアクセスを設定すると、DockerがUnixソケットだけでなく、IPアドレスとポートでもリクエストを受け入れるように構成できます。
 ---
 
+import { Callout } from 'nextra/components'
+
 # Dockerデーモンのリモートアクセスを設定する
 
 デフォルトでは、DockerデーモンはUnixソケットでの接続をリッスンして、ローカルクライアントからのリクエストを受け付けます。Dockerを構成して、Unixソケットだけでなく、IPアドレスとポートでリモートクライアントからのリクエストを受け付けるようにすることができます。
 
-> [!警告]
->
-> Dockerをリモートクライアントからの接続を受け入れるように構成すると、ホストへの不正アクセスやその他の攻撃に対して脆弱になる可能性があります。
->
-> Dockerをネットワークに公開する際のセキュリティ上の影響を十分に理解することが非常に重要です。接続を保護するための対策が取られない場合、リモートの非rootユーザーがホストのrootアクセスを取得する可能性があります。
->
-> TLSなしでのリモートアクセスは**推奨されません**。今後のリリースでは、明示的なオプトインが必要になる予定です。
-> この接続を保護するためにTLS証明書を使用する方法については、[Dockerデーモンソケットを保護する](https://docs.docker.com/engine/security/protect-access/)を参照してください。
+<Callout type="warning" emoji="⚠️">
+  Dockerをリモートクライアントからの接続を受け入れるように構成すると、ホストへの不正アクセスやその他の攻撃に対して脆弱になる可能性があります。
+
+  Dockerをネットワークに公開する際のセキュリティ上の影響を十分に理解することが非常に重要です。接続を保護するための対策が取られない場合、リモートの非rootユーザーがホストのrootアクセスを取得する可能性があります。
+
+  TLSなしでのリモートアクセスは**推奨されません**。今後のリリースでは、明示的なオプトインが必要になる予定です。
+  
+  この接続を保護するためにTLS証明書を使用する方法については、[Dockerデーモンソケットを保護する](https://docs.docker.com/engine/security/protect-access/)を参照してください。
+</Callout>
 
 ## リモートアクセスを有効にする
 
