--- a/pages/scout-ja/install.mdx
+++ b/pages/scout-ja/install.mdx
@@ -1,4 +1,5 @@
 import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra/components'
 
 # Docker Scout をインストールする
 
@@ -15,8 +16,9 @@ $ curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh 
 $ sh install-scout.sh
 ```
 
->[注意]
->インターネットからダウンロードしたスクリプトを実行する前に、必ず内容を確認してください。インストールする前に、便利なスクリプトの潜在的なリスクや制限について理解しておくことをお勧めします。
+<Callout type="warning" emoji="⚠️">
+  インターネットからダウンロードしたスクリプトを実行する前に、必ず内容を確認してください。インストールする前に、便利なスクリプトの潜在的なリスクや制限について理解しておくことをお勧めします。
+</Callout>
 
 ## 手動インストール
 
