--- a/pages/scout-ja/quickstart.mdx
+++ b/pages/scout-ja/quickstart.mdx
@@ -1,3 +1,4 @@
+import { Callout } from 'nextra/components'
 
 # Docker Scout クイックスタート
 
@@ -179,17 +180,17 @@ $ docker build --provenance=true --sbom=true --push -t <ORG_NAME>/scout-demo:v3 
 
 イメージページには、Scoutが有効になっているリポジトリが一覧表示されます。リスト内のイメージを選択して **Image details** サイドバーを開きます。サイドバーには、リポジトリの最後にプッシュされたタグのコンプライアンス概要が表示されます。
 
->[注意]
->
->ポリシー結果がまだ表示されていない場合、ページを更新してください。初めてDocker Scout Dashboardを使用する場合、結果が表示されるまでに数分かかることがあります。
+<Callout type="warning" emoji="⚠️">
+  ポリシー結果がまだ表示されていない場合、ページを更新してください。初めてDocker Scout Dashboardを使用する場合、結果が表示されるまでに数分かかることがあります。
+</Callout>
 
 **Up-to-Date Base Images** ポリシーを確認します。このポリシーは、使用しているベースイメージが最新かどうかを確認します。この例では、古いバージョンの `alpine` をベースイメージとして使用しているため、非準拠のステータスになっています。
 
 ポリシー名の横にある **View fix** ボタンを選択すると、違反の詳細と修正方法に関する推奨事項が表示されます。この場合、推奨されるアクションは [Docker ScoutのGitHubインテグレーション](./integrations/source-code-management/github.md)を有効にすることです。これにより、ベースイメージを自動的に最新の状態に保つことができます。
 
->[TIP]
->
->このガイドで使用されているデモアプリでは、この統合を有効にすることはできません。コードを所有するGitHubリポジトリにプッシュして、この統合を試してみてください！
+<Callout emoji="💡">
+  このガイドで使用されているデモアプリでは、この統合を有効にすることはできません。コードを所有するGitHubリポジトリにプッシュして、この統合を試してみてください！
+</Callout>
 
 ## まとめ
 
