--- a/pages/docker-workshop-ja/04_sharing_app.mdx
+++ b/pages/docker-workshop-ja/04_sharing_app.mdx
@@ -62,7 +62,7 @@ import { Callout } from 'nextra/components'
 
 イメージがビルドされ、レジストリにプッシュされたので、このコンテナイメージを見たことがない新しいインスタンスでアプリを実行してみましょう。これを行うには、Play with Dockerを使用します。
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   Play with Dockerはamd64プラットフォームを使用します。Appleシリコンを搭載したARMベースのMacを使用している場合は、Play with Dockerと互換性のあるイメージに再ビルドし、新しいイメージをリポジトリにプッシュする必要があります。
 
   amd64プラットフォーム用のイメージをビルドするには、`--platform` フラグを使用します。
