--- a/pages/docker-workshop-ja/05_persisting_data.mdx
+++ b/pages/docker-workshop-ja/05_persisting_data.mdx
@@ -88,7 +88,7 @@ CLIまたはDocker Desktopのグラフィカルインターフェースを使用
     $ docker run -dp 127.0.0.1:3000:3000 --mount type=volume,src=todo-db,target=/etc/todos getting-started
     ```
 
-    <Callout type="info" emoji="ℹ️">
+    <Callout type="info">
       Git Bashを使用している場合、このコマンドの構文が異なります。
       
       ```console
@@ -116,7 +116,7 @@ CLIまたはDocker Desktopのグラフィカルインターフェースを使用
     2. 検索ウィンドウで **Images** タブを選択します。
     3. 検索ボックスにイメージ名 `getting-started` を指定します。
 
-    <Callout emoji="💡">
+    <Callout>
       **Local images** のみを表示するために検索フィルタを使用してください。
     </Callout>
 
