--- a/pages/docker-workshop-ja/06_bind_mounts.mdx
+++ b/pages/docker-workshop-ja/06_bind_mounts.mdx
@@ -277,7 +277,7 @@ CLIまたはDocker Desktopを使用して、バインドマウント付きでコ
       2. 検索ウィンドウで **Images** タブを選択します。
       3. 検索ボックスにコンテナ名 `getting-started` を指定します。
 
-        <Callout emoji="💡">
+        <Callout>
           **Local images** のみを表示するために検索フィルタを使用してください。
         </Callout>
 
