--- a/pages/docker-workshop-ja/index.mdx
+++ b/pages/docker-workshop-ja/index.mdx
@@ -14,7 +14,7 @@ import { Callout } from 'nextra/components'
 - データベースを含む複数のコンテナを使用してDockerアプリケーションをデプロイする方法
 - Docker Compose を使用してアプリケーションを実行する方法
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   Dockerの簡単な紹介やアプリケーションのコンテナ化の利点については、
   [Getting started](https://docs.docker.com/get-started/introduction/) を参照してください。
 </Callout>
