--- a/pages/private/remote-access.mdx
+++ b/pages/private/remote-access.mdx
@@ -10,7 +10,7 @@ import { Callout } from 'nextra/components'
 
 デフォルトでは、DockerデーモンはUnixソケットでの接続をリッスンして、ローカルクライアントからのリクエストを受け付けます。Dockerを構成して、Unixソケットだけでなく、IPアドレスとポートでリモートクライアントからのリクエストを受け付けるようにすることができます。
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning">
   Dockerをリモートクライアントからの接続を受け入れるように構成すると、ホストへの不正アクセスやその他の攻撃に対して脆弱になる可能性があります。
 
   Dockerをネットワークに公開する際のセキュリティ上の影響を十分に理解することが非常に重要です。接続を保護するための対策が取られない場合、リモートの非rootユーザーがホストのrootアクセスを取得する可能性があります。
