--- a/pages/scout-ja/integrations/ci/gha.mdx
+++ b/pages/scout-ja/integrations/ci/gha.mdx
@@ -94,7 +94,7 @@ jobs:
 3. Git リファレンスや GitHub イベントからメタデータを抽出します。
 4. Dockerイメージをビルドし、レジストリにプッシュします。
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   このCIワークフローはローカルのイメージ分析と評価を実行します。イメージをローカルで評価するためには、ランナーのローカルイメージストアにイメージがロードされている必要があります。
 
   イメージをレジストリにプッシュした場合や、マルチプラットフォームイメージ、SBOMや証明書付きイメージなどがローカルイメージストアにロードできない場合、この比較は機能しません。
