--- a/pages/scout-ja/integrations/code-quality/sonarqube.mdx
+++ b/pages/scout-ja/integrations/code-quality/sonarqube.mdx
@@ -16,7 +16,7 @@ SonarQube の統合により、Docker Scout はポリシー評価を通じて So
 
 新しいイメージをリポジトリにプッシュすると、Docker Scout はそのイメージに対応する SonarQube 分析記録の結果を評価します。Docker Scout はイメージに付随する Git のプロベナンスメタデータ（プロベナンスアテステーションまたは OCI アノテーション）を使用して、イメージリポジトリと SonarQube の分析結果をリンクします。
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   Docker Scout は過去の SonarQube 分析記録にはアクセスできません。統合を有効化した後に記録された分析結果のみが Docker Scout に利用可能です。
 </Callout>
 
