--- a/pages/scout-ja/integrations/registry/acr.mdx
+++ b/pages/scout-ja/integrations/registry/acr.mdx
@@ -24,7 +24,7 @@ Azure でリソースが作成された後、統合された ACR インスタン
 
 以下の表は、設定リソースの説明を示しています。
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   これらのリソースを作成すると、Azure アカウントに小額の継続的なコストが発生します。表の **Cost** 列には、1 日あたり 100 個のイメージがプッシュされる ACR レジストリを統合する際の推定月額コストが表示されています。
 
   Egress コストは使用量に応じて異なりますが、約 $0.1/GB で、最初の 100 GB は無料です。
@@ -162,7 +162,7 @@ Azure でリソースが作成された後、統合された ACR インスタン
 
 ## 統合の削除
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   Docker Scout ダッシュボードで統合を削除しても、Azure に作成されたリソースは自動的には削除されません。
 </Callout>
 
