--- a/pages/scout-ja/integrations/team-collaboration/slack.mdx
+++ b/pages/scout-ja/integrations/team-collaboration/slack.mdx
@@ -16,7 +16,7 @@ Docker ScoutをSlackと統合することで、SlackのWebhookを作成し、Doc
 
 連携を設定すると、Docker Scout はリポジトリのポリシーコンプライアンスや脆弱性の露出に関する変更を、Webhook に関連付けられたSlackチャンネルに通知します。
 
-<Callout type="info" emoji="ℹ️">
+<Callout type="info">
   通知は、各リポジトリの「最後にプッシュされた」イメージタグに対してのみトリガーされます。「最後にプッシュされた」とは、レジストリに最後にプッシュされ、Docker Scoutによって分析されたイメージタグを指します。最後にプッシュされたイメージが新しく公開されたCVEの影響を受けていない場合、通知はトリガーされません。
 </Callout>
 
