--- a/pages/scout-ja/install.mdx
+++ b/pages/scout-ja/install.mdx
@@ -16,7 +16,7 @@ $ curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh 
 $ sh install-scout.sh
 ```
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning">
   インターネットからダウンロードしたスクリプトを実行する前に、必ず内容を確認してください。インストールする前に、便利なスクリプトの潜在的なリスクや制限について理解しておくことをお勧めします。
 </Callout>
 
