--- a/pages/scout-ja/integrations/ci.mdx
+++ b/pages/scout-ja/integrations/ci.mdx
@@ -14,4 +14,4 @@ Docker Scout CLI プラグインや GitHub Action を使用して、Dockerイメ
 - [Circle CI](/scout-ja/integrations/ci/circle-ci)
 - [Jenkins](/scout-ja/integrations/ci/jenkins)
 
-また、CI/CDパイプラインの一環としてランタイム連携を追加し、デプロイ時にイメージを `production` や `staging` といった環境に割り当てることもできます。詳細については [Environment モニタリング](https://chatgpt.com/environment/_index.md)をご覧ください。
+また、CI/CDパイプラインの一環としてランタイム連携を追加し、デプロイ時にイメージを `production` や `staging` といった環境に割り当てることもできます。詳細については[実行環境モニタリング](/scout-ja/integrations/environment)をご覧ください。
