--- a/pages/scout-ja/integrations/team-collaboration/slack.mdx
+++ b/pages/scout-ja/integrations/team-collaboration/slack.mdx
@@ -20,7 +20,7 @@ Docker ScoutをSlackと統合することで、SlackのWebhookを作成し、Doc
   通知は、各リポジトリの「最後にプッシュされた」イメージタグに対してのみトリガーされます。「最後にプッシュされた」とは、レジストリに最後にプッシュされ、Docker Scoutによって分析されたイメージタグを指します。最後にプッシュされたイメージが新しく公開されたCVEの影響を受けていない場合、通知はトリガーされません。
 </Callout>
 
-Docker Scoutの通知についての詳細は、[通知設定](/manuals/scout/explore/dashboard.md#notification-settings)をご覧ください。
+Docker Scoutの通知についての詳細は、[通知設定](/scout-ja/explore/dashboard#notification-settings)をご覧ください。
 
 ## 設定方法
 
